<resources>
    <string name="app_name" translatable="false">ArkanMusic</string>
    <string name="package_name" translatable="false">com.caserteam.arkanoid</string>
    <string name="sign_out_button" translatable="false">Log Out</string>
    <string name="firebase_root" translatable="false">https://arkanoid-d46b0-default-rtdb.europe-west1.firebasedatabase.app</string>
    <string name="win_game">Hai vinto!</string>
    <string name="lose_game">hai perso!</string>
    <string name="game_over" translatable="false">Game Over!</string>
    <string name="win_game_arcade"> Complimenti, hai completato tutti i livelli!</string>
    <string name="menu_pause"> Menù di pausa</string>
    <string name="success_record">Complimenti, hai effettuato un nuovo Record</string>
    <string name="failure_record">Peccato! non hai superato il tuo record di punti:   </string>

    <!-- label registrazione utente -->
    <string name="inserisci_un_nickname">Inserisci un Nickname</string>
    <string name="avanti">Avanti</string>
    <string name="nickname" translatable="false">nickname</string>


    <!-- label della classifica -->
    <string name="tab_text_1">Locale</string>
    <string name="tab_text_2">Globale</string>
    <string name="title_activity_leader_board">Classifica</string>


    <!-- label del login -->
    <string name="need_login">Devi essere loggato per poter accedere!</string>
    <string name="signed_out">Log out effettuato</string>
    <string name="signed_in_fmt">Login completato</string>
    <string name="guest_button">Gioca offline</string>
    <string name="signin_other_error">Errore nel login</string>


    <!-- label menu principale -->
    <string name="menu_principale">Menu Principale</string>
    <string name="welcome_text">Benvenuto</string>
    <string name="classifica">Classifica</string>
    <string name="arcade" translatable="false">Arcade</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="editor_livelli">Editor Livelli</string>
    <string name="exit_app">esci</string>


    <!-- label SplashScreen -->
    <string name="developed">Sviluppato da</string>


    <!-- label ActivitySettings -->
    <string name="ita" translatable="false">ITA</string>
    <string name="eng" translatable="false">ENG</string>
    <string name="esp" translatable="false">ESP</string>
    <string name="imposta_lingua">imposta lingua:</string>
    <string name="imposta_sistema_di_controllo">Imposta sistema di controllo</string>
    <string name="imposta_esistenza_audio">imposta audio</string>
    <string name="audio_on">attivato</string>
    <string name="audio_off">disattivato</string>
    <string name="scorri_con_il_dito">scorri con il dito</string>
    <string name="muovi_il_telefono">muovi il telefono</string>
    <string name="settings_title">Impostazioni</string>


    <!-- label save level dialog -->
    <string name="save_level_dialog">Salva livello</string>
    <string name="insert_name_level_hint">inserisci nome livello</string>
    <string name="save_label">Salva</string>

    <!-- messaggi di prompting editor -->
    <string name="select_brick">"seleziona un mattone"</string>
    <string name="deleted_selected_brick">"mattone selezionato eliminato"</string>
    <string name="all_bricks_are_deleted">"tutti i mattoni inseriti sono eliminati"</string>
    <string name="select_brick_to_remove_it">"seleziona un mattone per eliminarlo"</string>
    <string name="insert_bricks_to_delete_them">"inserisci dei mattoni per eliminarli"</string>
    <string name="save_level_no_brick">"per salvare inserisci almeno un brick nella griglia"</string>


    <!-- label upload levels -->
    <string name="select_level_created">modifica o elimina livelli</string>


    <!-- label cerca livelli condivisi -->
    <string name="select_level_to_play">seleziona un livello per giocarci</string>
    <string name="author_level">autore: </string>
    <string name="load_level_to_search">caricamento livelli condivisi</string>


    <!-- messaggi di caricamento  -->
    <string name="save_level">salvataggio in corso</string>
    <string name="load_levels_created">caricamento livelli creati</string>
    <string name="load_level_selected">caricamento livello selezionato</string>
    <string name="delete_level">eliminazione livello in corso</string>

    <string name="wait_access_room">in attesa di un altro giocatore</string>
    <string name="wait_loading_game_room">attendo il caricamento della partita</string>


    <!-- label del multiplayer -->
    <string name="multiplayer_mode">Modalità Multigiocatore</string>
    <string name="privata">privata</string>
    <string name="insert_room">inserisci codice stanza </string>
    <string name="create_room_button">crea</string>
    <string name="join_room_button">accedi</string>
    <string name="create_or_join_room">crea o accedi alla stanza</string>
    <string name="error_exist_room">esiste una room con questo codice</string>
    <string name="error_room_already_taken">stanza di gioco occupata</string>
    <string name="error_room_already_created">stanza ancora non creata</string>
    <string name="error_access_room_with_same_profile">impossibile accedere alla stanza</string>
    <string name="cancel_button">annulla</string>
    <string name="salva">Salva</string>

    <plurals name="numberOfLevelSearched">
        <item quantity="zero">nessun livello condiviso trovato</item>
        <item quantity="one">%d livello condiviso trovato</item>
        <item quantity="other">%d livelli condivisi trovati</item>
    </plurals>
    <plurals name="numberOfLevelCreated">
        <item quantity="zero">nessun livello creato trovato</item>
        <item quantity="one">%d livello creato trovato</item>
        <item quantity="other">%d livelli creati trovati</item>
    </plurals>

    <!-- label finestra di dialogo offline -->

    <string name="offline_label_title">Non è presente una connessione</string>
    <string name="offline_label_subtitle">Assicurati di avere una connessione ad internet per permettere
        all\' applicazione sia in grado di funzionare</string>

    <!-- label di accesso -->
    <string name="loading_access">accesso in corso...</string>

    <!-- prompt game multiplayer -->
    <string name="player1_message">Tocca lo schermo per iniziare la partita</string>
    <string name="player2_message">Aspetta che il tuo compagno inizi la partita</string>
    <string name="confirm_exit_message">Vuoi davvero uscire dalla partita?</string>
    <string name="confirm_yes">si</string>
    <string name="confirm_no">no</string>
    <string name="interrupt_message">partita interrotta!</string>
    <string name="interrupt_message_connection">partita interrotta per problemi di connessione</string>
    <string name="game_over_message" translatable="false">Game Over!</string>
    <string name="level_completed_message">Hai completato tutti i livelli in multiplayer!</string>



</resources>