<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="349dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_prented"
                android:text="@string/imposta_lingua"
                android:textAlignment="textStart" />

            <RadioGroup
                android:id="@+id/groupLanguage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioEsp"
                    android:layout_width="73dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/play_prented"
                    android:text="@string/esp" />

                <RadioButton
                    android:id="@+id/radioIta"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/play_prented"
                    android:text="@string/ita" />

                <RadioButton
                    android:id="@+id/radioEng"
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/play_prented"
                    android:text="@string/eng" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_prented"
            android:text="@string/imposta_sistema_di_controllo"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/play_prented"
                android:text="@string/scorri_con_il_dito"
                android:textAlignment="center" />

            <Switch
                android:id="@+id/switchControl"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:checked="false"
                android:showText="false"
                tools:checked="false" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/play_prented"
                android:text="@string/muovi_il_telefono"
                android:textAlignment="center" />

        </LinearLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_prented"
            android:text="@string/salva" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>