<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:scaleType="fitXY"
            android:src="@drawable/background_registration" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="319dp"
        android:layout_height="270dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:text="@string/inserisci_un_nickname"
            android:textColor="#0066ff"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:text="@string/nickname"
            android:textAlignment="center"
            android:textColorHint="@android:color/holo_orange_light" />

        <Button
            android:id="@+id/button_avanti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/avanti" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>